mac: change initialization so locale set before local state

This likely leads to using the wrong locale for non-english systems.

BUG=819369
TEST=none

Change-Id: Ie432f038567f077ab10a18257b4b89c8a1a3282e
Reviewed-on: https://chromium-review.googlesource.com/951708
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542018}
Former-commit-id: 740c2633585839e76fdc5d22964046b71d93dd8c